# imprint

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD  BUILD.bazel  CMakeLists.txt  DESCRIPTION  LICENSE  Pipfile  README.md  WORKSPACE  configs.bzl  conftest.py  environment.yml  generate_bazelrc  generate_bazelrc.py  pyproject.toml  pytest.ini  requirements-jax-cuda.txt  requirements.txt  setup.cfg
.github/: test.yml
imprint/: BUILD.bazel  CMakeLists.txt  README.md  __init__.py  batching.py  driver.py  grid.py  log.py  model.py  nb_util.py  planar_null.py  testing.py  timer.py
imprint/benchmark/: BUILD.bazel  direct_bayes.cpp  imprint_bound.cpp  simple_selection_accum.cpp
imprint/bound/: __init__.py  binomial.py  exponential.py  multivariate_normal.py  normal.py  normal2.py  optimizer.py  scaled_chisq.py
imprint/example/: BUILD.bazel  normal_simple.cpp
imprint/include/imprint_bits/bound/: typeI_error_bound.hpp
imprint/include/imprint_bits/distribution/: binomial.hpp  exponential.hpp  uniform.hpp
imprint/include/imprint_bits/driver/: accumulate.hpp
imprint/include/imprint_bits/grid/: adagrid_internal.hpp  decl.hpp  grid_range.hpp  gridder.hpp  hyperplane.hpp  tile.hpp
imprint/include/imprint_bits/model/: base.hpp  fixed_single_arm_size.hpp
imprint/include/imprint_bits/stat/: log_rank_test.hpp  unpaired_test.hpp
imprint/include/imprint_bits/util/: d_ary_int.hpp  exceptions.hpp  macros.hpp  math.hpp  progress_bar.hpp  serializer.hpp  trace_malloc.hpp  types.hpp
imprint/include/kevlar_bits/distribution/: normal.hpp
imprint/include/kevlar_bits/grid/: utils.hpp
imprint/include/kevlar_bits/util/: algorithm.hpp  legendre.hpp
imprint/models/: basket.py  binom1d.py  chisq.py  fisher_exact.py  ttest.py  ttest_adaptive.py  ztest.py
imprint/test/: BUILD.bazel  CMakeLists.txt
imprint/test/bound/: typeI_error_bound_unittest.cpp
imprint/test/bound/accumulator/: typeI_error_accum_unittest.cpp
imprint/test/distribution/: binomial_unittest.cpp  exponential_unittest.cpp
imprint/test/grid/: grid_range_unittest.cpp  gridder_unittest.cpp  hyperplane_unittest.cpp  tile_unittest.cpp  utils_unittest.cpp
imprint/test/model/binomial/: direct_bayes.cpp  simple_selection_unittest.cpp
imprint/test/model/exponential/: simple_log_rank_unittest.cpp
imprint/test/stat/: log_rank_test_unittest.cpp
imprint/test/testutil/: base_fixture.hpp  eigen_ext.hpp
imprint/test/testutil/grid/: tile.hpp
imprint/test/testutil/model/: base.hpp
imprint/test/util/: algorithm_unittest.cpp  d_ary_int_unittest.cpp  math_unittest.cpp  progress_bar_unittest.cpp  types_unittest.cpp
kevlar/benchmark/: BUILD  BUILD.bazel  CMakeLists.txt  bench_binomial_2_arm.cpp  binomial_control_k_treatment_fit.cpp  binomial_control_k_treatment_tune.cpp  direct_bayes.cpp  kevlar_bound.cpp  simple_selection_accum.cpp
kevlar/example/: BUILD  BUILD.bazel  CMakeLists.txt  binomial_2_arm.cpp  binomial_control_2_treatment.cpp  gaussian_simple.cpp  normal_simple.cpp
python/: .gitignore  BUILD.bazel  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
python/example/: BUILD.bazel  adagrid_simple_log_rank.py  berry_inla_cpp.py  berry_inla_py.ipynb  berry_inla_py.md  simple2.ipynb  simple2.py  simple_log_rank.py  simple_selection.py  test_berry.py  test_berry_kevlar.py  test_simple.py  thompson.py  utils.py
python/example/berry/: .gitignore  berry.py  berry_inla_cpp.py  berry_inla_py.ipynb  berry_inla_py.md  berry_kevlar.ipynb  berry_kevlar.md  binomial.py  binomial_accumulate.py  dirty_bayes.py  fast_inla.py  fast_inla_ext.cpp  mcmc.py  nb_config.py  quadrature.py  simple2.py  test_berry.py  test_berry_kevlar.py  util.py
python/examples/: BUILD.bazel  adagrid_bin_example.py  adagrid_example.py  adagrid_exp_example.py  bckt_example.py  eckt_example.py  explore.ipynb  explore.py  fit_driver_example.py  fit_process_example.py  fit_thread_example.py  test.py  utils.py
python/examples/rayproj/: Dockerfile  README.md  fit_ray_example.py  id_rsa.docker  id_rsa.pub  ray_smoketest.py
python/pyimprint/: __init__.py
python/pyimprint/batcher/: __init__.py
python/pyimprint/bound/: __init__.py
python/pyimprint/driver/: accumulate.py
python/pyimprint/grid/: __init__.py  adagrid.py
python/pyimprint/model/: __init__.py
python/pyimprint/model/binomial/: __init__.py
python/pyimprint/model/exponential/: __init__.py
python/pyimprint/model/normal/: simple.py
python/pykevlar/: __init__.py  fit.py
python/pykevlar/batcher/: __init__.py  simple_batch.py
python/pykevlar/bound/: __init__.py
python/pykevlar/driver/: __init__.py  accumulate.py  fit.py
python/pykevlar/grid/: __init__.py  adagrid.py
python/pykevlar/model/: __init__.py
python/pykevlar/model/binomial/: __init__.py
python/pykevlar/model/exponential/: __init__.py
python/src/: core.cpp  core.hpp  intersum.cpp  pykevlar.cpp
python/src/bound/: bound.cpp  bound.hpp  typeI_error_accum.hpp  typeI_error_bound.hpp
python/src/driver/: accumulate.hpp  driver.cpp  driver.hpp  fit.hpp
python/src/export_utils/: types.hpp
python/src/grid/: adagrid_internal.cpp  adagrid_internal.hpp  grid.cpp  grid.hpp  grid_range.cpp  grid_range.hpp  gridder.cpp  gridder.hpp  hyperplane.hpp  tile.hpp
python/src/model/: base.cpp  base.hpp  binomial_control_k_treatment.cpp  binomial_control_k_treatment.hpp  exp_control_k_treatment.cpp  exp_control_k_treatment.hpp  fixed_single_arm_size.hpp  model.cpp  model.hpp
python/src/stats/: inter_sum.cpp  inter_sum.hpp  stats.cpp  stats.hpp  upper_bound.cpp  upper_bound.hpp
python/src/std/: std.cpp  std.hpp
python/src/util/: grid.cpp  util.cpp  util.hpp
python/test/: BUILD.bazel  core_main.py  model_main.py  test_imprint.py
python/test/core/: __init__.py
python/test/model/: __init__.py
python/test/src/: core_test.cpp  model.hpp
src/kevlar/example/: CMakeLists.txt  binomial_2_arm.cpp  binomial_control_2_treatment_fit.cpp  binomial_control_2_treatment_tune.cpp  exp_control_treatment_tune.cpp
src/kevlar/test/: BUILD  CMakeLists.txt  intersum_unittest.cpp
(+409 files in other folders)
