[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imprint"
version = "0.2.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "jax>=0.3.24",
    "jaxlib>=0.3.24",
    "matplotlib>=3.2.2",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scipy>=1.7.3",
    "sympy>=1.7.1",
]
authors = [
    {name = "Confirm Solutions", email = "research@confirmsol.org"},
]

[project.optional-dependencies]
test = ["pytest>=1.2", "ipython>=8.8.0"]

[tool.setuptools.packages.find]

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"
