load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
PACKAGE_VERSION = "0.1"

py_library(
    name = "pyimprint_lib",
    srcs = glob(["pyimprint/**/*.py"]),
    data = ["pyimprint/core.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pyimprint_headers",
    hdrs = glob(["src/**/*.hpp"]),
    includes = ["src/"],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "pyimprint/core",
    srcs = glob([
        "src/**/*cpp",
        "src/**/*hpp",
    ]),
    includes = ["src/"],
    deps = ["//imprint"],
    visibility = ["//visibility:public"]
)

genrule(
    name = "pyimprint_wheel",
    srcs = [
        "README.md",
        "pyimprint/core.so",
    ] + glob(["**/*py"]),
    outs = ["dist/pyimprint-{}-py3-none-any.whl".format(PACKAGE_VERSION)],
    cmd_bash = """
    cp $(location pyimprint/core.so) python/
    cd python/
    VERSION={0} python3 setup.py bdist_wheel
    cd ..
    cp python/dist/pyimprint-{0}-py3-none-any.whl $@
    """.format(PACKAGE_VERSION),
)
