cc_library(
    name = "testutil",
    srcs = glob([
        "testutil/**/*.hpp",
        "testutil/**/*.cpp",
    ]),
    hdrs = glob([
        "testutil/**/*.hpp",
    ]),
    includes = ["."],
    deps = [
        "//imprint",
    ],
)

[cc_test(
    name = type_,
    srcs = glob(["{}/**/*.cpp".format(type_)]),
    defines = ["EIGEN_INITIALIZE_MATRICES_BY_NAN"],
    deps = [
        ":testutil",
        "//imprint",
        "@com_google_googletest//:gtest_main",
        "@fmtlib//:fmt",
    ],
) for type_ in [
    "bound",
    "distribution",
    "grid",
    "model",
    "stat",
    "util",
]]
