load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "core_test",
    srcs = glob([
        "src/**/*cpp",
        "src/**/*hpp",
    ]),
    includes = ["src/"],
    deps = ["//imprint", "//python:pyimprint_headers"],
    visibility = ["//visibility:public"],
)

[py_test(
    name = name,
    srcs = ["{}_main.py".format(name)],
    data = ["//python:pyimprint/core.so", ":core_test.so"],
    deps = [
        "//python:pyimprint_lib",
    ],
    imports = ["."],
    main = "{}_main.py".format(name),
) for name in [
    "core",
    "model",
]]
